# mrsp

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  bibliography.md  glossary.md  pyproject.toml  typos.toml
01_intro/: index.md
02_mvp/: index.md
03_newcomers/: index.md
04_governance/: index.md
05_marketing/: index.md
06_hr/: index.md
07_product/: index.md
08_project/: index.md
09_finale/: index.md
_extras/: bibliography.md  evaluation.md  glossary.md  links.md
advice/: index.md
bibliography/: index.md
bonus/: programmer-competency-matrix.md
burnout/: index.md
career/: index.md
changeminds/: index.md
checklist/: index.md
conflict/: index.md
docs/: err.txt  index.html
docs/01_intro/: index.html
docs/02_mvp/: index.html
docs/03_newcomers/: index.html
docs/04_governance/: index.html
docs/05_marketing/: index.html
docs/06_hr/: index.html
docs/07_product/: index.html
docs/08_project/: index.html
docs/09_finale/: index.html
docs/advice/: index.html
docs/bibliography/: index.html
docs/bonus/: evaluation.html  programmer-competency-matrix.html
docs/burnout/: index.html
docs/career/: index.html
docs/changeminds/: index.html
docs/checklist/: index.html
docs/conduct/: index.html
docs/conflict/: index.html
docs/contrib/: index.html
docs/contributing/: index.html
docs/finale/: index.html
docs/glossary/: index.html  index.md
docs/governance/: index.html
docs/health/: index.html
docs/hirefire/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/lifecycle/: index.html
docs/marketing/: index.html
docs/meritocracy/: index.html
docs/newcomers/: index.html
docs/performance/: index.html
docs/perfreview/: index.html  index.md
docs/politics/: index.html
docs/process/: index.html  index.md
extras/: words.txt
finale/: index.md
glossary/: index.md
governance/: index.md
health/: index.md
hirefire/: index.md
intro/: index.md
lifecycle/: index.md
log/: 2026-05-08-01-48-overhaul-outline.md  2026-05-13-02-05-convert-to-mccole-syntax.md  2026-05-13-09-26-reorganize-by-outline.md  2026-05-13-12-07-add-politics-meritocracy-changeminds.md  2026-05-13-23-15-split-people-lesson.md  2026-05-14-22-50-revise-hirefire.md  2026-05-15-01-23-gap-analysis.md  2026-05-16-21-55-reformat-four-lessons.md  2026-05-16-23-43-fix-glossary-bibliography.md  2026-05-19-11-48-ai-lesson-points.md
marketing/: index.md
meritocracy/: index.md
newcomers/: index.md
performance/: index.md
politics/: index.md
process/: index.md
project/: index.md
remote/: index.md
requirements/: index.md
retro/: index.md
safety/: index.md
security/: index.md
templates/: page.html
upward/: index.md
(+9 files in other folders)
