[project]
name = "mrsp"
description = "managing research software projects"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "linkchecker",
    "mccole"
]

[tool.mccole]
skips = ["*~", "*.bib", "extras/**", "uv.lock"]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
